Fixed footer misalignment

--- a/styles.css
+++ b/styles.css
@@ -37,14 +37,12 @@
 
 body, .content{
   width: 90%;
-  height: 80vh;
   margin-right: auto;
   margin-left: auto;
 }
 
 .bold {
-  font-family: 'DM Sans', sans-serif;
-  font-weight: 700;
+  font-family: 'PPNikkeiMaru', sans-serif;
 }
 
 .text-center {
@@ -163,6 +161,7 @@ a.nav-item-right:hover , a.nav-item-left:hover {
 /* -------------------------------------------------------------------------- */
 #homepage p#intro {
   font-size: 40px;
+  height: 80vh;
 }
 
 .blue-text {
